--- a/weather-frontend/package.json
+++ b/weather-frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.9"
